--- a/E-commerce/Ecommerce-Customers-Site/Views/Home/Index.cshtml
+++ b/E-commerce/Ecommerce-Customers-Site/Views/Home/Index.cshtml
@@ -2,7 +2,98 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container-fluid px-0 mb-3">
+    <div id="carouselExampleCaptions" class="carousel slide mb-3" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="~/assets/images/banner_1.webp" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="~/assets/images/banner_2.webp" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="~/assets/images/banner_3.webp" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <ul class="nav nav-pills justify-content-center mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Most Discount</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">What's New</button>
+        </li>
+    </ul>
+
+    <div class="tab-content container" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+            @await Component.InvokeAsync("ListProductDiscount")
+        </div>
+        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+            @await Component.InvokeAsync("ListProductNew")
+        </div>
+    </div>
+
+    <div class="container-fluid my-4 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 d-flex flex-column justify-content-center">
+                    <h3>The Best Bags</h3>
+                    <h1>For Every Travel Need</h1>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <img src="~/assets/images/travel-banner.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="container row text-center d-flex justify-content-center align-items-center">
+            <div class="col-12 col-md-6 col-lg-3 mb-4">
+                <div class="p-3">
+                    <img class="my-3" src="~/assets/images/ico-office-site.svg" style="height: 7rem; width: 7rem;" alt="...">
+                    <h5>Official Website</h5>
+                    <p>The largest online selection of official Samsonite products including luggage, backpacks, bags and travel accessories.</p>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3 mb-4">
+                <div class="p-3">
+                    <img class="my-3" src="~/assets/images/ico-delivery.svg" style="height: 7rem; width: 7rem;" alt="...">
+                    <h5>Fast Delivery</h5>
+                    <p>Online orders are delivered within 5 working days using a premium courier service.</p>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3 mb-4">
+                <div class="p-3">
+                    <img class="my-3" src="~/assets/images/ico-secure-payment.svg" style="height: 7rem; width: 7rem;" alt="...">
+                    <h5>Secure payment</h5>
+                    <p>Secure Socket Layer (SSL) encryption makes every transaction safe and reliable.</p>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3 mb-4">
+                <div class="p-3">
+                    <img class="my-3" src="~/assets/images/ico-full-collection.svg" style="height: 7rem; width: 7rem;" alt="...">
+                    <h5>Full Collection</h5>
+                    <p>One-stop shop for exploring the complete Samsonite collection online.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </div>
