--- a/E-commerce/Ecommerce-Customers-Site/Views/Shared/_Layout.cshtml
+++ b/E-commerce/Ecommerce-Customers-Site/Views/Shared/_Layout.cshtml
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Ecommerce-Customers-Site.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/custom.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             @* <a class="navbar-brand" asp-area="" asp-controller="Category" asp-action="Index">Category App</a> *@
             <div class="container-fluid">
                 @* <div class="container"> *@
@@ -33,15 +34,69 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
+    @if (ViewBag.IsHome != null && (bool)ViewBag.IsHome)
+    {
+        <div class="container-fluid px-0">
+            <main role="main">
+                @RenderBody()
+            </main>
+        </div>
+    }
+    else
+    {
         <div class="container">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
+    }
+
+    <footer class="bg-dark text-white py-5 border-top text-muted"> @* Removed "footer" *@
+@*         <div class="container">
             &copy; 2024 - Ecommerce_Customers_Site - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div> *@
+        <div class="container">
+             <div class="row">
+                <div class="col-md-3">
+                    <h5>Hotline</h5>
+                    <p>1-800-123-4567</p>
+                </div>
+                <div class="col-md-3">
+                    <h5>Brand</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Our Story</a></li>
+                        <li><a href="#">Careers</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h5>Customer Support</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Shipping & Returns</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h5>Our Location</h5>
+                    <address>
+                        123 Ap Bac St<br>
+                        Ho Chi Minh City<br>
+                        VietNam
+                    </address>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col">
+                    <h5>Follow Us</h5>
+                    <ul class="list-inline">
+                        <li class="list-inline-item"><a href="#"><i class="bi bi-facebook fs-3"></i></a></li>
+                        <li class="list-inline-item"><a href="#"><i class="bi bi-twitter fs-3"></i></a></li>
+                        <li class="list-inline-item"><a href="#"><i class="bi bi-instagram fs-3"></i></a></li>
+                        <li class="list-inline-item"><a href="#"><i class="bi bi-linkedin fs-3"></i></a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
