--- a/E-commerce/Ecommerce-Customers-Site/wwwroot/css/custom.css
+++ b/E-commerce/Ecommerce-Customers-Site/wwwroot/css/custom.css
@@ -57,3 +57,21 @@ footer address, footer p {
     text-decoration: none;
     color: antiquewhite
 }
+
+/* CSS Pagination */
+.custom-pagination .page-item .page-link {
+    background-color: white;
+    color: black;
+    border: black;
+}
+
+.custom-pagination .page-item .page-link:hover {
+    background-color: #333;
+    color: white;
+}
+
+.custom-pagination .page-item.active .page-link {
+    background-color: black;
+    color: white;
+    border-color: white;
+}
