Create View Product Detail Page

--- a/E-commerce/Ecommerce-Customers-Site/Views/Shared/Components/ProductCard/Default.cshtml
+++ b/E-commerce/Ecommerce-Customers-Site/Views/Shared/Components/ProductCard/Default.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Shared_ViewModels.Product
 @model ProductVmDto
 
-<div class="card h-60">
-    <img src="https://n1.sdlcdn.com/imgs/a/o/9/American-Tourister-SKI-Orange-68CM-SDL653114455-1-13cbd.JPG" class="card-img-top" alt="img">
-    <div class="card-body">
+<div class="card h-100">
+    <img src="@Model.ProductTypes.First().ProductImages.First().ImageUrl" class="card-img-top" alt="img">
+    <div class="card-body d-flex flex-column">
         <h5 class="card-title">@Model.Name</h5>
 
         <div class="my-2">
@@ -15,12 +15,12 @@
         </div>
 
         <p class="card-text">@Model.Description</p>
-        <p class="card-text">
+        <p class="card-text mt-auto">
             <span class="text-decoration-line-through text-dark">@Model.Price.ToString("C")</span>
-            <span class="text-danger fw-bold ms-2">@((Model.Price * (1 - Model.Discount)).ToString("C"))</span>
+            <span class="text-danger fw-bold ms-2">@((Model.Price * (100 - Model.Discount) / 100).ToString("C"))</span>
         </p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-between">
-            <button class="btn btn-outline-dark btn-lg" type="button">SEE DETAIL</button>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-between mt-auto">
+            <a class="btn btn-outline-dark btn-lg" asp-controller="Product" asp-action="Detail" asp-route-id="@Model.Id">SEE DETAIL</a>
             <button class="btn btn-lg btn-dark" type="button">ADD TO CART</button>
         </div>
     </div>
