--- a/E-commerce/Ecommerce-Customers-Site/Views/Shared/_Layout.cshtml
+++ b/E-commerce/Ecommerce-Customers-Site/Views/Shared/_Layout.cshtml
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="~/Ecommerce-Customers-Site.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/custom.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    @* Import css fot slider *@
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.1/nouislider.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.1/nouislider.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.2.0/wNumb.min.js"></script>
+
 </head>
 <body>
     <header>
