--- a/E-commerce/Ecommerce-Customers-Site/Views/Shared/_Layout.cshtml
+++ b/E-commerce/Ecommerce-Customers-Site/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="~/assets/images/Luggage_Icon.svg" />
     <title>@ViewData["Title"] - Vamvoda</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -41,6 +42,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/custom.js" asp-append-version="true"></script>
+
+    <!--  Page scripts  -->
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
