--- a/E-commerce/Ecommerce-Customers-Site/Views/Shared/Components/CartIcon/Default.cshtml
+++ b/E-commerce/Ecommerce-Customers-Site/Views/Shared/Components/CartIcon/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model int
 
 <div class="d-flex align-items-center ms-auto mx-2">
-    <a href="#" class="position-relative me-3">
+    <a href="/Cart" class="position-relative me-3">
         <i class="bi text-dark bi-cart fs-4"></i>
         <span class="badge bg-danger position-absolute top-0 start-100 translate-middle">@Model</span>
     </a>
