--- a/E-commerce/Ecommerce-Customers-Site/Views/Shared/_Layout.cshtml
+++ b/E-commerce/Ecommerce-Customers-Site/Views/Shared/_Layout.cshtml
@@ -17,7 +17,9 @@
 
 </head>
 <body>
+
     @Html.Partial("_Header")
+
 
     @if (ViewBag.IsHomeOrAuthPage != null && (bool)ViewBag.IsHomeOrAuthPage)
     {
@@ -37,6 +39,13 @@
     }
 
     @Html.Partial("_Footer")
+
+    <!-- Toast Notification Container -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="toastContainer" class="border">
+            <!-- Toasts will be dynamically added here -->
+        </div>
+    </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
