Apply Repository And Unit Of Work Patterns

--- a/E-commerce/Ecommerce-Customers-Site/Views/Product/Detail.cshtml
+++ b/E-commerce/Ecommerce-Customers-Site/Views/Product/Detail.cshtml
@@ -201,5 +201,9 @@
                 }
             });
         }
+
+        function updateCartCount(cartCount) {
+            $('.badge').text(cartCount);
+        }
     </script>
 }
